fix overflow issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,13 @@
       url("/fonts/open-sans-v29-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
   scroll-padding: 5rem;
